--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,50 @@
-.buttonsWrapper {
+body {
+  font-family: sans-serif;
+  line-height: 1.5;
+  margin: 0;
   display: flex;
-  gap: 8px;
+  place-items: center;
+  min-width: 320px;
 }
 
-.feedbackButton {
-  display: flex;
-  justify-content: center;
-  align-content: center;
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+p {
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+button {
+  border-radius: 8px;
+  border: 1px solid grey;
+  padding: 0.6em 1.2em;
+  font-size: 1.2em;
+  font-weight: bold;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
+button:hover {
+  border-color: #363636;
+  background-color: rgba(196, 195, 195, 0.39);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+
+  a:hover {
+    color: #747bff;
+  }
+
+  button {
+    background-color: #f9f9f9;
+  }
 }
